--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"engines": {
 		"node": "14.5.0"
 	},
-	"main": "index.js",
+	"main": "index.ts",
 	"scripts": {
 		"codegen": "graphql-let",
 		"dev": "next",
@@ -27,12 +27,15 @@
 	"dependencies": {
 		"apollo-server-micro": "^2.15.1",
 		"lodash": "^4.17.19",
+		"mongodb": "^3.5.9",
 		"next": "^9.4.4",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.14.157",
+		"@types/mongodb": "^3.5.25",
 		"@types/node": "^14.0.20",
 		"@types/react": "^16.9.41",
 		"@types/react-dom": "^16.9.8",
